--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <span>I'm front end developer!</span>
       <p>Extremely motivated to constantly develop my skills and grow professionally. I am happy and extremely personable and excel in a positive work environment.</p>
       <div class="btns-group">
-        <a href="#projects" class="btn btn-primary">let's explorer</a>
+        <a href="#projects" class="btn btn-primary">let's explore</a>
       </div>
     </div>
     <div class="image">
