--- a/index.html
+++ b/index.html
@@ -111,6 +111,13 @@
 </section>
 <!-- Footer -->
 <footer class="footer">
+    
+    <div class="flex-center">
+        <i class="fa fa-github fa-4x icon-3d"></i>
+        <i class="fa fa-gitlab fa-4x icon-3d"></i>
+        <i class="fa fa-bitbucket fa-4x icon-3d"></i>
+        <i class="fa fa-git fa-4x icon-3d"></i>
+      </div>
   <div class="container">
    
   </div>
