footer and font

--- a/index.html
+++ b/index.html
@@ -104,8 +104,9 @@
 </section>
 <!-- Contact Section -->
 <section class="contact" id="contact">
-  <h2 class="section-title fill">Contact</h2>
-  <p class="description">Feel free to message me here about your feedback and opinions about my portfolio.</p>
+<header><h1><center>Contact</h1></center></header>
+  <br>
+  <p class="description">Please, use the form below or send an email to garciacruzmichaelangelo@gmail.com</p>
   <div class="container">
     <form action="#" enctype="multipart/form-data" method="post">
       <div class="field">
